# IAP-CGFD

./: .gitmodules  CMakeLists.txt  FindGSL.cmake  README.md  _config.yml  index.html
_includes/: footer.html  head.html  header.html
_layouts/: redirect.html
advection/: run.config
advection/beam_warming/: CMakeLists.txt  main.cpp
advection/crank_nicolson/: CMakeLists.txt  main.cpp
advection/ffsl/: CMakeLists.txt  main.bugs.cpp  main.cpp  main_1d.cpp  main_2d.cpp
advection/fromm/: CMakeLists.txt  main.cpp
advection/ftcs/: CMakeLists.txt  main.cpp
advection/lax_wendroff/: CMakeLists.txt  main.cpp
advection/leapfrog/: CMakeLists.txt  main.cpp
advection/mpdata/: CMakeLists.txt  main.cpp
advection/semi_lagrangian/: CMakeLists.txt  main.cpp
advection/tspas/: CMakeLists.txt  main.cpp
advection/upwind/: CMakeLists.txt  main.cpp
shallow_water/cartesian/: run.config
shallow_water/cartesian/semi_lagrangian/: CMakeLists.txt  main.cpp
tools/: animate_1d_advection.ncl  animate_2d_advection.ncl  compare_1d_advection.ncl  plot_1d_advection.ncl
zh/: index.html
zh/advection/: index.html
zh/advection/examples/finite_difference/: ftcs.html  upwind.html
